syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.zup.grpc;

service KeymanagerRegistraGrpcService {
    rpc cadastrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoDeChave {
    UNKNOWN_TIPO_CHAVE = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    CHAVE_ALEATORIA = 4;
}
enum TipoDeConta {
    UNKNOWN_TIPO_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
    string clienteId = 1;
    TipoDeChave tipoChave = 2;
    string valorChave = 3;
    TipoDeConta tipoConta = 4;
}

message RegistraChavePixResponse {
    string clienteId = 1;
    string pixId = 2;
}

message ErrorDetails {
    int32 code = 1;
    string message = 2;
}
